--- a/Mobile App - Book It/BookItApp/package.json
+++ b/Mobile App - Book It/BookItApp/package.json
@@ -10,16 +10,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "4.0.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
+    "moment": "^2.29.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-cards": "^1.1.4",
     "react-native-element-dropdown": "^2.1.0",
+    "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
