--- a/BE-Book-It/BookIt/BookIt.csproj
+++ b/BE-Book-It/BookIt/BookIt.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>BookIt</AssemblyName>
     <RootNamespace>BookIt</RootNamespace>
+    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
