--- a/Mobile App - Book It/BookItApp/package.json
+++ b/Mobile App - Book It/BookItApp/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "axios": "^0.27.2",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
