--- a/Mobile App - Book It/BookItApp/package.json
+++ b/Mobile App - Book It/BookItApp/package.json
@@ -18,8 +18,10 @@
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.34",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-moment": "^1.1.2",
     "react-native": "0.64.3",
     "react-native-cards": "^1.1.4",
     "react-native-element-dropdown": "^2.1.0",
