--- a/BookItProj/package.json
+++ b/BookItProj/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.2.0",
     "mdb-react-ui-kit": "^4.1.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-validation": "^0.1.11",
