--- a/BE-Book-It/BookIt/appsettings.json
+++ b/BE-Book-It/BookIt/appsettings.json
@@ -8,6 +8,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=BookItDB;Integrated Security=True;"
-  }
+    //"DefaultConnection": "Server=.;Database=BookItDB;Integrated Security=True;",
+    "DefaultConnection": "Data Source=SQL5107.site4now.net;Initial Catalog=db_a8c1be_bookitdb;User Id=db_a8c1be_bookitdb_admin;Password=Mm.125694123"
+
+
+
+  },
+
 }
