--- a/Mobile App - Book It/BookItApp/app.json
+++ b/Mobile App - Book It/BookItApp/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Transiit App",
-    "slug": "my-app",
+    "name": "Book It",
+    "slug": "Book-It",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -21,10 +21,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/favicon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "Transiit.com"
+      "package": "BookIt.com"
     },
     "web": {
       "favicon": "./assets/favicon.png"
