--- a/BE-Book-It/BookIt/BookIt.csproj
+++ b/BE-Book-It/BookIt/BookIt.csproj
@@ -5,11 +5,17 @@
     <AssemblyName>BookIt</AssemblyName>
     <RootNamespace>BookIt</RootNamespace>
     <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <UserSecretsId>c20c3931-cd05-4b0d-b36f-ce873a88d7fb</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="microsoft.aspnetcore.cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
