--- a/BE-Book-It/BookIt/appsettings.Development.json
+++ b/BE-Book-It/BookIt/appsettings.Development.json
@@ -1,10 +1,17 @@
 {
-  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=.;Database=BookItDB;Integrated Security=True;",
+    //"DefaultConnection": "Data Source=SQL5107.site4now.net;Initial Catalog=db_a8c1be_bookitdb;User Id=db_a8c1be_bookitdb_admin;Password=Mm.125694123",
+    "DefaultConnection": "Server=tcp:bookitdbserver.database.windows.net,1433;Initial Catalog=BookItDB;Persist Security Info=False;User ID=mohmed6535;Password=Mm.125694123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
   }
+
 }
